src/test/resources/shexTest/negativeStructure/Cycle2Negation.shex
PREFIX :       <http://example.org/>

:S NOT { :a @:S }
